Update DawnSquad to latest SquidSquad.
This currently means it is almost the same as DawnlikeDemo in the SquidSquad tests. I'll go through and bring back features that were added here next.